--- a/project6-project-management/src/translations/en.json
+++ b/project6-project-management/src/translations/en.json
@@ -1,7 +1,7 @@
 {
   "ttl.your.projects": "Your projects",
   "ttl.no.project.selected": "No project selected",
-  "ttl.adding.new.project": "Adding new project",
+  "ttl.adding.new.project": "Adding a new project",
   "btn.add.project": "+ Add project",
   "btn.save": "Save",
   "btn.cancel": "Cancel",
